# peeches

./: .gitignore  README-zh.md  README.md  package.json  pnpm-lock.yaml
py/: convert.py  main.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  translate.rs  whisper.rs
src/components/: History.css  History.tsx  Lyrics.tsx  Settings.css  Settings.tsx
src/hooks/: useLyrics.ts  useModels.ts
src/providers/: JotaiProvider.tsx
src/store/: atoms.ts
